new texture conflict dataset

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "import shutil\n",
+    "import csv\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
@@ -26,21 +26,22 @@
     "\n",
     "import util.util_validation as ut_val\n",
     "from networks.resnet_big import SupCEResNet, SupConResNet, LinearClassifier, model_dict\n",
+    "from util.util_logging import open_csv_file\n",
     "\n",
     "seaborn.set_theme(style=\"darkgrid\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "cuda_device = 0\n",
     "\n",
     "dataset = \"animals10_diff_-1\"\n",
-    "styles_path = \"./datasets/adaIN/textures_animals10\"\n",
-    "output_path = \"./datasets/adaIN/shape_texture_conflict_animals10\"\n",
+    "styles_path = \"./datasets/adaIN/textures_animals10_many\"\n",
+    "output_path = \"./datasets/adaIN/shape_texture_conflict_animals10_many\"\n",
     "\n",
     "\n",
     "tmp_shape = \"./datasets/adaIN/tmp/shape/\"\n",
@@ -57,6 +58,45 @@
     "_, root_test = ut_val.get_root_dataset(dataset)\n",
     "\n",
     "image_loader = datasets.folder.default_loader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute miss classified Shape Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuda_device = 0\n",
+    "\n",
+    "models_dict = {\"CE_baseline\": [\"./save/SupCE/animals10/SupCE_animals10_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_baseline_cosine/models/last.pth\", None],\n",
+    "               \"CE_diffAug\": [\"./save/SupCE/animals10_diff_-1+4000/SupCE_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_diffAug_cosine/models/last.pth\", None],\n",
+    "               \"CE_diffAugAllAug\": [\"./save/SupCE/animals10_diff_-1+4000/SupCE_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_diffAugAllAug_cosine/models/last.pth\", None],\n",
+    "               \"SupCon_baseline\": [\"./save/SupCon/animals10_diff_-1/SupCon_animals10_diff_-1_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_try3_cosine/models/last.pth\", \"\"],\n",
+    "               \"SupCon_diffCSameSAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAugSameShapeAug_cosine/models/last.pth\", \"\"]}\n",
+    "\n",
+    "dataset_stConflict = \"./datasets/adaIN/shape_texture_conflict_animals10/\"\n",
+    "\n",
+    "exclude_original_dict = ut_val.compute_exclude_dict(models_dict, dataset_stConflict, cuda_device)\n",
+    "\n",
+    "csv_file = \"./datasets/adaIN/experiments/exclude_animals10.csv\"\n",
+    "with open(csv_file, 'w') as f:\n",
+    "    w = csv.DictWriter(f, exclude_original_dict)\n",
+    "    w.writeheader()\n",
+    "    w.writerow(exclude_original_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create texture shape conflict Dataset"
    ]
   },
   {
@@ -95,7 +135,7 @@
     "\n",
     "    return pd.DataFrame.from_dict({'image': images, 'label': labels})\n",
     "\n",
-    "def  adaIN(path_shape, path_style, path_output, size=300,\n",
+    "def adaIN(path_shape, path_style, path_output, size=300,\n",
     "           adaIn_execution_file=adaIn_execution_file, adaIn_vgg=adaIn_vgg,\n",
     "           adaIn_decoder=adaIn_decoder, cuda_device=cuda_device):\n",
     "\n",
@@ -112,6 +152,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- exclude miss classified images\n",
+    "- stylize each shape with a texture of all other classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_file = \"./datasets/adaIN/experiments/exclude_animals10.csv\"\n",
+    "\n",
+    "loaded_exclude_dict = open_csv_file(csv_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style_kinds = np.sort(np.array([style_kind.split('/')[-1] for style_kind in glob.glob(os.path.join(styles_path, \"*\"))]))\n",
+    "style_paths = glob.glob(os.path.join(styles_path, \"*\", \"*\"))\n",
+    "num_styles_per_shape = len(style_kinds) + (-1 if len(set(classes).intersection(style_kinds)) > 0 else 0)\n",
+    "\n",
+    "df_test = create_files_dataFrame(root_test, classes)\n",
+    "\n",
+    "image_names = np.array([img.split('.')[0] for img in df_test[\"image\"].values])\n",
+    "\n",
+    "keep_indices = []\n",
+    "for c in loaded_exclude_dict:\n",
+    "    l = np.where(np.array(classes) == c)[0][0]\n",
+    "    excl_class_indices = df_test.query(f\"label=={l}\")[[\"image\"]].map(lambda img: img.split('.')[0] not in loaded_exclude_dict[c]).query(\"image\").index\n",
+    "    keep_indices.extend(excl_class_indices)\n",
+    "df_keep_test = df_test.iloc[keep_indices].copy().reset_index(drop=True)\n",
+    "\n",
+    "min_class_count = df_keep_test.groupby(\"label\").count().min()[\"image\"]\n",
+    "df_stylize = df_keep_test.groupby(\"label\").sample(min_class_count).copy().reset_index(drop=True)\n",
+    "\n",
+    "for i in range(num_styles_per_shape):\n",
+    "    df_stylize[f\"style_label_{i}\"] = len(df_stylize)*[-1]\n",
+    "\n",
+    "for l,c in enumerate(classes):\n",
+    "    for i in range(num_styles_per_shape):\n",
+    "        class_index = df_stylize[df_stylize.label == l].index\n",
+    "        df_stylize.loc[class_index, f\"style_label_{i}\"] = df_stylize[df_stylize.label == l][[f\"style_label_{i}\"]].map(lambda _: i + (1 if i >= l else 0))\n",
+    "\n",
+    "df_stylize_list = [\n",
+    "    df_stylize[[\"image\", \"label\", f\"style_label_{i}\"]].rename(columns={f\"style_label_{i}\": \"style_label\"})\n",
+    "    for i in range(num_styles_per_shape)\n",
+    "]\n",
+    "df_stylize = pd.concat(df_stylize_list).sort_values([\"label\", \"image\", \"style_label\"]).reset_index(drop=True)\n",
+    "\n",
+    "df_stylize[f\"style_image\"] = len(df_stylize)*[\"\"]\n",
+    "for tl,s in enumerate(style_kinds):\n",
+    "    for l,c in enumerate(classes):\n",
+    "        if s != c:\n",
+    "            style_index = df_stylize.query(f\"label=={l} & style_label=={tl}\").index\n",
+    "            if len(style_index) == 0:\n",
+    "                print(s, c)\n",
+    "            style_index = style_index[np.random.permutation(len(style_index))]\n",
+    "\n",
+    "            style_examples = [s_e.split('/')[-1] for s_e in glob.glob(os.path.join(styles_path, s, \"*\"))]\n",
+    "            index_examples = np.array_split(style_index, len(style_examples))\n",
+    "            for j, s_e in enumerate(style_examples):\n",
+    "                df_stylize.loc[index_examples[j],\"style_image\"] = s_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 225/225 [15:53<00:00,  4.24s/it]\n",
+      "100%|██████████| 225/225 [15:38<00:00,  4.17s/it]\n",
+      "100%|██████████| 225/225 [14:53<00:00,  3.97s/it]\n",
+      "100%|██████████| 225/225 [15:33<00:00,  4.15s/it]\n",
+      "100%|██████████| 225/225 [15:39<00:00,  4.18s/it]\n",
+      "100%|██████████| 225/225 [14:51<00:00,  3.96s/it]\n",
+      "100%|██████████| 225/225 [15:42<00:00,  4.19s/it]\n",
+      "100%|██████████| 225/225 [15:25<00:00,  4.11s/it]\n",
+      "100%|██████████| 225/225 [16:04<00:00,  4.29s/it]\n",
+      "100%|██████████| 225/225 [14:57<00:00,  3.99s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l, c in enumerate(classes):\n",
+    "    for s_path in tqdm(style_paths):\n",
+    "        s_e = s_path.split('/')[-1]\n",
+    "        df_shape_style = df_stylize.query(f\"label == {l} & style_image == '{s_e}'\")\n",
+    "        images = df_shape_style[\"image\"].values\n",
+    "        if len(images) > 0:\n",
+    "            style_label = df_shape_style[\"style_label\"].values[0]\n",
+    "            out_path = os.path.join(output_path, c, style_kinds[style_label])\n",
+    "\n",
+    "            image_loader(s_path).save(os.path.join(tmp_style, s_path.split('/')[-1]))\n",
+    "            \n",
+    "            for img in images:\n",
+    "                img_path = os.path.join(root_test, c, img)\n",
+    "                image_loader(img_path).save(os.path.join(tmp_shape, img))\n",
+    "            \n",
+    "            adaIN(path_shape=tmp_shape, path_style=tmp_style, path_output=out_path, cuda_device=cuda_device)\n",
+    "\n",
+    "            tmp_files = glob.glob(os.path.join(tmp_shape, \"*\"))\n",
+    "            tmp_files.extend(glob.glob(os.path.join(tmp_style, \"*\")))\n",
+    "\n",
+    "            for f in tmp_files:\n",
+    "                os.remove(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- stylize each shape with one random selected texture of an other class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -120,14 +300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 124.05it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 79.93it/s]\n"
      ]
     }
    ],
@@ -135,7 +308,7 @@
     "style_kinds = np.array([style_kind.split('/')[-1] for style_kind in glob.glob(os.path.join(styles_path, \"*\"))])\n",
     "style_paths = glob.glob(os.path.join(styles_path, \"*\", \"*\"))\n",
     "\n",
-    "df_test = create_files_dataFrame(root_test, classes)# TODO Test this out\n",
+    "df_test = create_files_dataFrame(root_test, classes)\n",
     "\n",
     "df_test[\"style_label\"] = len(df_test)*[-1]\n",
     "df_test[\"style_image\"] = len(df_test)*[\"\"]\n",
