rework logging fix bug with class acc in shape bias

--- a/validation_compile_results.ipynb
+++ b/validation_compile_results.ipynb
@@ -10,7 +10,8 @@
     "import glob\n",
     "import pandas as pd\n",
     "\n",
-    "import util.util_validation as ut_val"
+    "import util.util_validation as ut_val\n",
+    "from util.util_logging import load_confusion_matrix"
    ]
   },
   {
@@ -84,7 +85,7 @@
     "for training in training_dict:\n",
     "    acc_dict[\"training\"].append(training)\n",
     "    for dataset, cm_path in training_dict[training]:\n",
-    "        cm = ut_val.load_confusion_matrix(cm_path)\n",
+    "        cm = load_confusion_matrix(cm_path)\n",
     "        acc, acc_b = ut_val.compute_accuracies(cm)\n",
     "\n",
     "        acc_dict[dataset].append(f\"{acc:.2f} ({acc_b:.2f})\")\n",
