--- a/validation_distances.ipynb
+++ b/validation_distances.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn\n",
-    "import util.util_validation as ut_val"
+    "import util.util_validation as ut_val\n",
+    "\n",
+    "from util.util_logging import open_csv_file, create_distances_md"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +46,7 @@
     "# animals10\n",
     "# SupCE\n",
     "# root_model = \"./save/SupCE/animals10/SupCE_animals10_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_baseline_cosine/models/last.pth\"\n",
+    "# root_model = \"./save/SupCE/animals10_diff_-1/SupCE_animals10_diff_-1_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_origAllAug_cosine/models/last.pth\"\n",
     "\n",
     "# root_model = \"./save/SupCE/animals10_diff_4000/SupCE_animals10_diff_4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_4000_cosine/models/last.pth\"\n",
     "# root_model = \"./save/SupCE/animals10_diff_8000/SupCE_animals10_diff_8000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_8000_cosine/models/last.pth\"\n",
@@ -65,7 +68,7 @@
     "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupConHybrid_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAug_cosine/models/last.pth\"\n",
     "\n",
     "# SupCon factor\n",
-    "root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_5.0_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_factor5cAugSameSAug_cosine/models/ckpt_epoch_150.pth\"\n",
+    "root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_5.0_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_factor5cAugSameSAug_cosine/models/last.pth\"\n",
     "\n",
     "# city_scapes\n",
     "# SupCE\n",
@@ -81,9 +84,9 @@
     "root_train_1, root_test_1 = ut_val.get_root_dataset(dataset_1)\n",
     "root_train_2, root_test_2 = ut_val.get_root_dataset(dataset_2)\n",
     "\n",
-    "path_save, path_run_md, path_val_md_1, path_val_md_2, path_comb_md, path_comb, path_embeddings_1, path_embeddings_2, epoch = ut_val.get_paths_to_embeddings_and_run_md(root_model, dataset_1, dataset_2)\n",
+    "path_folder, path_embeddings_1, path_embeddings_2, epoch = ut_val.get_paths_from_model_checkpoint(root_model, dataset_1, dataset_2)\n",
     "\n",
-    "params = ut_val.read_parameters_from_run_md(path_run_md)"
+    "params = open_csv_file(os.path.join(path_folder, \"params.csv\"))"
    ]
   },
   {
@@ -95,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "if len(aug_dict['aug']) > 0:\n",
     "    train_loader, val_loader = ut_val.set_dataloader(dataset_1, params, root_train_1, root_test_1, root_train_2, root_test_2, aug_dict)\n",
     "\n",
-    "    model = ut_val.set_model(root_model, params, len(val_loader.dataset.classes), cuda_device)"
+    "    model = ut_val.set_model(root_model, params, cuda_device)"
    ]
   },
   {
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,15 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:05<00:00,  1.77it/s]\n",
-      "100%|██████████| 5236/5236 [00:40<00:00, 128.51it/s]\n"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:04<00:00,  2.04it/s]\n",
+      "100%|██████████| 5236/5236 [00:39<00:00, 133.57it/s]"
      ]
     },
     {
@@ -165,21 +175,30 @@
      "output_type": "stream",
      "text": [
       "Mean Distances:\n",
-      "Related Images: 0.0231\n",
-      "Mean for same Class: 0.3344\n",
-      "All versus all: 0.4445\n"
+      "Related Images: 0.0157 (0.0375)\n",
+      "Mean for same Class: 0.3030 (0.7257)\n",
+      "All versus all: 0.4175 (1.0000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "mean_dist, mean_dist_class, mean_dist_all = ut_val.compute_mean_distance(embedding_test_1, embedding_test_2, class_labels_test)\n",
     "print(\"Mean Distances:\")\n",
-    "print(f\"Related Images: {mean_dist:.4f}\")\n",
-    "print(f\"Mean for same Class: {mean_dist_class:.4f}\")\n",
-    "print(f\"All versus all: {mean_dist_all:.4f}\")\n",
+    "print(f\"Related Images: {mean_dist:.4f} ({mean_dist/mean_dist_all:.4f})\")\n",
+    "print(f\"Mean for same Class: {mean_dist_class:.4f} ({mean_dist_class/mean_dist_all:.4f})\")\n",
+    "print(f\"All versus all: {mean_dist_all:.4f} ({mean_dist_all/mean_dist_all:.4f})\")\n",
     "\n",
     "df_dist = pd.DataFrame.from_dict({\"Related_Images\": [mean_dist], \"Same_Class\": [mean_dist_class], \"All_versus_all\": [mean_dist_all]})\n",
-    "df_dist.to_csv(os.path.join(path_embeddings_1, f\"{dataset_1}_dist_to_{dataset_2}.csv\"), index=False)"
+    "df_dist.to_csv(os.path.join(path_embeddings_1, f\"{dataset_1}_dist_to_{dataset_2}.csv\"), index=False)\n",
+    "\n",
+    "create_distances_md(path_folder)"
    ]
   },
   {
