--- a/validation_shap_bias_2.ipynb
+++ b/validation_shap_bias_2.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,6 +18,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "from networks.resnet_big import model_dict\n",
+    "from util.util_logging import open_csv_file\n",
     "\n",
     "seaborn.set_style(\"darkgrid\")"
    ]
@@ -28,11 +30,16 @@
    "outputs": [],
    "source": [
     "models_dict = {\"CE_baseline\": [\"./save/SupCE/animals10/SupCE_animals10_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_baseline_cosine/models/ckpt_epoch_500.pth\", None],\n",
+    "               \"CE_origAllAug\": [\"./save/SupCE/animals10_diff_-1/SupCE_animals10_diff_-1_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_origAllAug_cosine/models/last.pth\", None],\n",
+    "               \"CE_diff4000\": [\"./save/SupCE/animals10_diff_4000/SupCE_animals10_diff_4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_4000_cosine/models/last.pth\", None],\n",
+    "               \"CE_diff8000\": [\"./save/SupCE/animals10_diff_8000/SupCE_animals10_diff_8000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_8000_cosine/models/last.pth\", None],\n",
     "               \"CE_diffAug\": [\"./save/SupCE/animals10_diff_-1+4000/SupCE_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_diffAug_cosine/models/last.pth\", None],\n",
     "               \"CE_diffAugAllAug\": [\"./save/SupCE/animals10_diff_-1+4000/SupCE_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_diffAugAllAug_cosine/models/last.pth\", None],\n",
     "               \"SupCon_baseline\": [\"./save/SupCon/animals10_diff_-1/SupCon_animals10_diff_-1_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_try3_cosine/models/last.pth\", \"\"],\n",
+    "               \"SupCon_diff4000NoAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_noAug_cosine/models/last.pth\", \"\"],\n",
     "               \"SupCon_diffCSameSAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAugSameShapeAug_cosine/models/last.pth\", \"\"],\n",
-    "               \"SupConHybrid_diffColorAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupConHybrid_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAug_cosine/models/last.pth\", \"\"]}"
+    "               \"SupConHybrid_diffColorAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupConHybrid_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAug_cosine/models/last.pth\", \"\"],\n",
+    "               \"SupConFactor_factor5cAugSameSAug\": [\"./save/SupCon/animals10_diff_-1+4000/SupCon_5.0_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_factor5cAugSameSAug_cosine/models/last.pth\", \"\"]}"
    ]
   },
   {
@@ -43,13 +50,13 @@
    "source": [
     "cuda_device = 0\n",
     "\n",
-    "root_model = models_dict[\"SupConHybrid_diffColorAug\"][0]\n",
+    "root_model = models_dict[\"SupCon_diff4000NoAug\"][0]\n",
     "\n",
     "root_dataset = \"./datasets/adaIN/shape_texture_conflict_animals10_many/\"\n",
     "\n",
-    "path_save, path_run_md, epoch = ut_val.get_paths_to_embeddings_and_run_md(root_model)\n",
+    "path_folder, epoch = ut_val.get_paths_from_model_checkpoint(root_model)\n",
     "\n",
-    "params = ut_val.read_parameters_from_run_md(path_run_md)"
+    "params = open_csv_file(os.path.join(path_folder, \"params.csv\"))"
    ]
   },
   {
@@ -74,7 +81,7 @@
     "conflict_dataloader = torch.utils.data.DataLoader(conflict_dataset, batch_size=params['batch_size'],\n",
     "                                                  shuffle=False, num_workers=16, pin_memory=True)\n",
     "\n",
-    "model = ut_val.set_model(root_model, params, len(classes), cuda_device)"
+    "model = ut_val.set_model(root_model, params, cuda_device)"
    ]
   },
   {
@@ -93,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 897/897 [04:42<00:00,  3.18it/s]\n"
+      "100%|██████████| 897/897 [04:41<00:00,  3.18it/s]\n"
      ]
     }
    ],
@@ -193,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "[105, 161, 246]"
+       "[90, 182, 240]"
       ]
      },
      "execution_count": 8,
@@ -213,12 +220,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "epoch: last\n",
     "- CE_baseline: [93, 179, 240]\n",
+    "- CE_origAllAug: [99, 169, 244]\n",
+    "- CE_diff4000: [89, 184, 239]\n",
+    "- CE_diff8000: [90, 182, 240]\n",
     "- CE_diffAug: [90, 184, 238]\n",
     "- CE_diffAugAllAug: [96, 173, 243]\n",
     "- SupCon_baseline: [102, 159, 251]\n",
+    "- SupCon_diff4000NoAug: [90, 182, 240]\n",
     "- SupCon_diffCSameSAug: [104, 158, 250]\n",
-    "- SupConHybrid_diffColorAug: [105, 161, 246]"
+    "- SupConHybrid_diffColorAug: [105, 161, 246]\n",
+    "- SupConFactor_factor5cAugSameSAug: [104, 157, 251]\n",
+    "\n",
+    "epoch: 150\n",
+    "- SupConFactor_factor5cAugSameSAug: [100, 162, 250]"
    ]
   }
  ],
