correct error in shape bias plot: now use class recall

--- a/test_slected_textures.ipynb
+++ b/test_slected_textures.ipynb
@@ -228,11 +228,11 @@
     "\n",
     "    C = ut_val.get_confusion_matrix(df_pred)\n",
     "    acc, acc_b = ut_val.compute_accuracies(C)\n",
-    "    print(f\"Textures: acc: {acc:.3f}, acc_b: {acc_b:.3f}\")\n",
+    "    print(f\"Textures: acc: {acc*100:.3f}, acc_b: {acc_b*100:.3f}\")\n",
     "\n",
     "    C_orig = ut_val.get_confusion_matrix(df_pred, pred=\"pred_orig_class\")\n",
     "    acc_orig, acc_orig_b = ut_val.compute_accuracies(C_orig)\n",
-    "    print(f\"Originals: acc: {acc_orig:.3f}, acc_b: {acc_orig_b:.3f}\")\n",
+    "    print(f\"Originals: acc: {acc_orig*100:.3f}, acc_b: {acc_orig_b*100:.3f}\")\n",
     "\n",
     "    seaborn.set_theme(style=\"ticks\")\n",
     "\n",
