--- a/validation_shape_bias_2.ipynb
+++ b/validation_shape_bias_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "cuda_device = 0\n",
     "\n",
-    "model_short_name = \"CE_cityDiff\"\n",
+    "model_short_name = \"CE_baseline\"\n",
     "root_model = models_dict[model_short_name][0]\n",
     "\n",
     "root_dataset = \"./datasets/adaIN/shape_texture_conflict_animals10_many/\"\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,29 +279,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 163/163 [00:48<00:00,  3.34it/s]\n"
+      "100%|██████████| 202/202 [01:03<00:00,  3.17it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataset_orig = \"city_classification_original\"# \"animals10_diff_-1\"\n",
-    "dataset_diff = \"city_classification_diff\"# \"animals10_diff_4000\"\n",
+    "dataset_orig = \"animals10_diff_-1\"\n",
+    "dataset_diff = \"animals10_diff_4000\"\n",
+    "# dataset_orig = \"city_classification_original\"\n",
+    "# dataset_diff = \"city_classification_diff\"\n",
     "\n",
     "_, path_embeddings_orig, path_embeddings_diff, _ = ut_val.get_paths_from_model_checkpoint(root_model, dataset_1=dataset_orig, dataset_2=dataset_diff)\n",
     "\n",
     "_, root_dataset_orig = ut_val.get_root_dataset(dataset=dataset_orig)\n",
     "\n",
     "normalize = transforms.Normalize(mean=params['mean'], std=params['std'])\n",
-    "val_transform = transforms.Compose([transforms.ToTensor(), ShufflePatches(patch_size=30), normalize])\n",
+    "shufflePatchers_transform = transforms.Compose([transforms.ToTensor(), ShufflePatches(patch_size=30), normalize])\n",
     "\n",
-    "shufflePatches_dataset = datasets.ImageFolder(root=root_dataset_orig,transform=val_transform)\n",
+    "shufflePatches_dataset = datasets.ImageFolder(root=root_dataset_orig,transform=shufflePatchers_transform)\n",
     "\n",
     "shufflePatches_dataloader = torch.utils.data.DataLoader(shufflePatches_dataset, batch_size=params['batch_size'],\n",
     "                                                        shuffle=False, num_workers=16, pin_memory=True)\n",
@@ -315,7 +317,7 @@
     "model.eval()\n",
     "\n",
     "embedding_test_patch = np.array([])\n",
-    "labels_test_patch= np.array([], dtype=int)\n",
+    "labels_test_patch = np.array([], dtype=int)\n",
     "with torch.no_grad():\n",
     "    for images, labels in tqdm(shufflePatches_dataloader):\n",
     "        images = images.cuda(device=cuda_device, non_blocking=True)\n",
@@ -340,6 +342,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 202/202 [01:00<00:00,  3.32it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "patchesColor_transform = transforms.Compose([transforms.ColorJitter(0.4, 0.4, 0.4, 0.4),\n",
+    "                                             transforms.ToTensor(), ShufflePatches(patch_size=30), normalize])\n",
+    "\n",
+    "patchesColor_dataset = datasets.ImageFolder(root=root_dataset_orig,transform=patchesColor_transform)\n",
+    "\n",
+    "patchesColor_dataloader = torch.utils.data.DataLoader(patchesColor_dataset, batch_size=params['batch_size'],\n",
+    "                                                        shuffle=False, num_workers=16, pin_memory=True)\n",
+    "\n",
+    "embedding_test_patchesColor = np.array([])\n",
+    "with torch.no_grad():\n",
+    "    for images, labels in tqdm(patchesColor_dataloader):\n",
+    "        images = images.cuda(device=cuda_device, non_blocking=True)\n",
+    "\n",
+    "        features = model.encoder(images)\n",
+    "\n",
+    "        embedding_test_patchesColor = np.append(embedding_test_patchesColor, features.cpu().numpy())\n",
+    "\n",
+    "embedding_test_patchesColor = embedding_test_patchesColor.reshape(-1, embedding_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 202/202 [01:01<00:00,  3.31it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, root_dataset_diff = ut_val.get_root_dataset(dataset=dataset_diff)\n",
+    "\n",
+    "color_transform = transforms.Compose([transforms.ColorJitter(0.4, 0.4, 0.4, 0.4),\n",
+    "                                      transforms.ToTensor(), normalize])\n",
+    "\n",
+    "diff_dataset = datasets.ImageFolder(root=root_dataset_diff,transform=color_transform)\n",
+    "\n",
+    "diff_dataloader = torch.utils.data.DataLoader(diff_dataset, batch_size=params['batch_size'],\n",
+    "                                                        shuffle=False, num_workers=16, pin_memory=True)\n",
+    "\n",
+    "embedding_test_diffColorJitter = np.array([])\n",
+    "with torch.no_grad():\n",
+    "    for images, labels in tqdm(diff_dataloader):\n",
+    "        images = images.cuda(device=cuda_device, non_blocking=True)\n",
+    "\n",
+    "        features = model.encoder(images)\n",
+    "\n",
+    "        embedding_test_diffColorJitter = np.append(embedding_test_diffColorJitter, features.cpu().numpy())\n",
+    "\n",
+    "embedding_test_diffColorJitter = embedding_test_diffColorJitter.reshape(-1, embedding_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -348,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +431,7 @@
     "    A_dm = A - A.mean(dim=0)\n",
     "    B_dm = B - B.mean(dim=0)\n",
     "\n",
-    "    correlation = (A_dm.T * B_dm.T).sum(dim=1) / ((A_dm.T * A_dm.T).sum(dim=1) * (B_dm.T * B_dm.T).sum(dim=1)).sqrt()\n",
+    "    correlation = (A_dm * B_dm).sum(dim=0) / ((A_dm * A_dm).sum(dim=0) * (B_dm * B_dm).sum(dim=0)).sqrt()\n",
     "    correlation = torch.nan_to_num(correlation, nan=0.0)\n",
     "\n",
     "    return correlation.mean().item()\n",
@@ -378,6 +450,51 @@
     "    return dims\n",
     "\n",
     "dim_estimate_dict = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: 135, texture:  91, color: 114, other: 172\n"
+     ]
+    }
+   ],
+   "source": [
+    "corr_score_shape = compute_correlation_score(embedding_test_orig, embedding_test_diffColorJitter)\n",
+    "corr_score_texture = compute_correlation_score(embedding_test_orig, embedding_test_patchesColor)\n",
+    "corr_score_color = compute_correlation_score(embedding_test_diff, embedding_test_patch)\n",
+    "\n",
+    "dims = estimate_dims([corr_score_shape, corr_score_texture, corr_score_color], embedding_size)\n",
+    "\n",
+    "print(f\"shape: {dims[0]:>3}, texture: {dims[1]:>3}, color: {dims[2]:>3}, other: {dims[3]:>3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: 163, texture: 141, other: 208\n"
+     ]
+    }
+   ],
+   "source": [
+    "corr_score_shape = compute_correlation_score(embedding_test_orig, embedding_test_diffColorJitter)\n",
+    "corr_score_texture = compute_correlation_score(embedding_test_orig, embedding_test_patch)\n",
+    "\n",
+    "dims = estimate_dims([corr_score_shape, corr_score_texture], embedding_size)\n",
+    "\n",
+    "print(f\"shape: {dims[0]:>3}, texture: {dims[1]:>3}, other: {dims[2]:>3}\")"
    ]
   },
   {
