test distances for allSameAug

--- a/validation_distances.ipynb
+++ b/validation_distances.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,24 +61,29 @@
     "# root_model = \"./save/SupCon/animals10_diff_-1/SupCon_animals10_diff_-1_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_try3_cosine/models/last.pth\"\n",
     "\n",
     "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_noAug_cosine/models/last.pth\"\n",
-    "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAugSameShapeAug_cosine/models/last.pth\"\n",
+    "root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAugSameShapeAug_cosine/models/last.pth\"\n",
     "\n",
     "# SupConHybrid\n",
     "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupConHybrid_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_noAug_cosine/models/last.pth\"\n",
     "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupConHybrid_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAug_cosine/models/last.pth\"\n",
     "\n",
     "# SupCon factor\n",
-    "root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_5.0_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_factor5cAugSameSAug_cosine/models/last.pth\"\n",
+    "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_5.0_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_factor5cAugSameSAug_cosine/models/last.pth\"\n",
     "\n",
     "# city_scapes\n",
     "# SupCE\n",
     "# root_model = \"./save/SupCE/city_classification_original/SupCE_city_classification_original_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_cityBaseline_cosine/models/last.pth\"\n",
     "# root_model = \"./save/SupCE/city_classification_diff/SupCE_city_classification_diff_resnet18_lr_0.125_decay_0.0001_bsz_26_trial_0_cityDiff_cosine/models/last.pth\"\n",
     "\n",
+    "\n",
+    "# root_model = \"./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_allSameAug_cosine/models/last.pth\"\n",
+    "\n",
     "dataset_1 = \"animals10_diff_-1\"\n",
     "dataset_2 = \"animals10_diff_4000\"\n",
     "\n",
-    "aug_dict = {'aug': [], 'resizedCrop': [0.5, 1.0, 3/4, 4/3], 'horizontalFlip': 0.5, 'colorJitter': [0.8, 0.4, 0.4, 0.4, 0.4], 'grayscale': 0.2}\n",
+    "# aug_dict = {'aug': [], 'resizedCrop': [0.5, 1.0, 3/4, 4/3], 'horizontalFlip': 0.5, 'colorJitter': [0.8, 0.4, 0.4, 0.4, 0.4], 'grayscale': 0.2}\n",
+    "aug_dict = {'aug': [\"sameColorJitter\", \"sameGrayscale\"],\n",
+    "            'resizedCrop': [0.5, 1.0, 3/4, 4/3], 'horizontalFlip': 0.5, 'colorJitter': [0.8, 0.4, 0.4, 0.4, 0.4], 'grayscale': 0.2}\n",
     "\n",
     "\n",
     "root_train_1, root_test_1 = ut_val.get_root_dataset(dataset_1)\n",
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 202/202 [01:58<00:00,  1.70it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "with open(os.path.join(path_embeddings_1, \"embedding_test\"), 'rb') as f:\n",
     "    entry = pickle.load(f, encoding='latin1')\n",
@@ -141,6 +154,176 @@
     "        embedding_train_2 = entry['data']\n",
     "else:\n",
     "    embedding_aug_1, embedding_aug_2, class_labels_aug = ut_val.compute_diff_embeddings(model, val_loader, params, cuda_device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SupCon cAugSameSAug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:13<00:00,  1.31s/it]\n",
+      "100%|██████████| 5236/5236 [02:57<00:00, 29.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Distances:\n",
+      "Related Images: 0.0324 (0.0862)\n",
+      "Mean for same Class: 0.2431 (0.6466)\n",
+      "All versus all: 0.3760 (1.0000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_dist, mean_dist_class, mean_dist_all = ut_val.compute_mean_distance(embedding_test_1, embedding_test_2, class_labels_test)\n",
+    "print(\"Mean Distances:\")\n",
+    "print(f\"Related Images: {mean_dist:.4f} ({mean_dist/mean_dist_all:.4f})\")\n",
+    "print(f\"Mean for same Class: {mean_dist_class:.4f} ({mean_dist_class/mean_dist_all:.4f})\")\n",
+    "print(f\"All versus all: {mean_dist_all:.4f} ({mean_dist_all/mean_dist_all:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:12<00:00,  1.29s/it]\n",
+      "100%|██████████| 5236/5236 [02:48<00:00, 31.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Distances for augmented Data:\n",
+      "Related Images: 0.0333 (0.0884)\n",
+      "Mean for same Class: 0.2476 (0.6576)\n",
+      "All versus all: 0.3766 (1.0000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_dist, mean_dist_class, mean_dist_all = ut_val.compute_mean_distance(embedding_aug_1, embedding_aug_2, class_labels_aug)\n",
+    "print(\"Mean Distances for augmented Data:\")\n",
+    "print(f\"Related Images: {mean_dist:.4f} ({mean_dist/mean_dist_all:.4f})\")\n",
+    "print(f\"Mean for same Class: {mean_dist_class:.4f} ({mean_dist_class/mean_dist_all:.4f})\")\n",
+    "print(f\"All versus all: {mean_dist_all:.4f} ({mean_dist_all/mean_dist_all:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SupCon allSameAug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:12<00:00,  1.27s/it]\n",
+      "100%|██████████| 5236/5236 [02:35<00:00, 33.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Distances:\n",
+      "Related Images: 0.0024 (0.0111)\n",
+      "Mean for same Class: 0.1951 (0.8831)\n",
+      "All versus all: 0.2209 (1.0000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_dist, mean_dist_class, mean_dist_all = ut_val.compute_mean_distance(embedding_test_1, embedding_test_2, class_labels_test)\n",
+    "print(\"Mean Distances:\")\n",
+    "print(f\"Related Images: {mean_dist:.4f} ({mean_dist/mean_dist_all:.4f})\")\n",
+    "print(f\"Mean for same Class: {mean_dist_class:.4f} ({mean_dist_class/mean_dist_all:.4f})\")\n",
+    "print(f\"All versus all: {mean_dist_all:.4f} ({mean_dist_all/mean_dist_all:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:12<00:00,  1.28s/it]\n",
+      "100%|██████████| 5236/5236 [02:41<00:00, 32.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Distances for augmented Data:\n",
+      "Related Images: 0.0025 (0.0088)\n",
+      "Mean for same Class: 0.2599 (0.9173)\n",
+      "All versus all: 0.2833 (1.0000)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_dist, mean_dist_class, mean_dist_all = ut_val.compute_mean_distance(embedding_aug_1, embedding_aug_2, class_labels_aug)\n",
+    "print(\"Mean Distances for augmented Data:\")\n",
+    "print(f\"Related Images: {mean_dist:.4f} ({mean_dist/mean_dist_all:.4f})\")\n",
+    "print(f\"Mean for same Class: {mean_dist_class:.4f} ({mean_dist_class/mean_dist_all:.4f})\")\n",
+    "print(f\"All versus all: {mean_dist_all:.4f} ({mean_dist_all/mean_dist_all:.4f})\")"
    ]
   },
   {
