create stylized animals10 for shape bias validation

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -33,15 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "cuda_device = 0\n",
     "\n",
     "dataset = \"animals10_diff_-1\"\n",
-    "styles_path = \"./datasets/adaIN/textures_animals10_many\"\n",
-    "output_path = \"./datasets/adaIN/shape_texture_conflict_animals10_many\"\n",
+    "styles_path = \"./datasets/adaIN/paintings/\"\n",
+    "output_path = \"./datasets/adaIN/stylized_animals10/test/\"\n",
     "\n",
     "\n",
     "tmp_shape = \"./datasets/adaIN/tmp/shape/\"\n",
@@ -149,6 +149,80 @@
     "               + f\"--output {path_output} --vgg {adaIn_vgg} --decoder {adaIn_decoder}\"\n",
     "    \n",
     "    os.system(adaIn_call)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------\n",
+    "\n",
+    "- stylize the dataset with paintings select at paintings random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style_kinds = np.array([style_kind.split('/')[-1] for style_kind in glob.glob(os.path.join(styles_path, \"*\"))])\n",
+    "style_paths = glob.glob(os.path.join(styles_path, \"*\", \"*\"))\n",
+    "\n",
+    "df_test = create_files_dataFrame(root_test, classes)\n",
+    "\n",
+    "N = int(np.ceil(len(df_test) / len(style_paths)))\n",
+    "style_index_shuffled = np.repeat(np.arange(len(style_paths)), repeats=N)[np.random.permutation(len(style_paths)*N)]\n",
+    "\n",
+    "df_test[\"style_index\"] = style_index_shuffled[:len(df_test)]\n",
+    "df_test[\"style_image\"] = [style_paths[i].split('/')[-1] for i in style_index_shuffled[:len(df_test)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 54/54 [04:28<00:00,  4.98s/it]\n",
+      "100%|██████████| 54/54 [04:21<00:00,  4.83s/it]\n",
+      "100%|██████████| 54/54 [04:12<00:00,  4.68s/it]\n",
+      "100%|██████████| 54/54 [04:18<00:00,  4.78s/it]\n",
+      "100%|██████████| 54/54 [04:27<00:00,  4.95s/it]\n",
+      "100%|██████████| 54/54 [04:14<00:00,  4.71s/it]\n",
+      "100%|██████████| 54/54 [04:10<00:00,  4.64s/it]\n",
+      "100%|██████████| 54/54 [04:07<00:00,  4.58s/it]\n",
+      "100%|██████████| 54/54 [04:36<00:00,  5.12s/it]\n",
+      "100%|██████████| 54/54 [04:11<00:00,  4.66s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l, c in enumerate(classes):\n",
+    "    for s_path in tqdm(style_paths):\n",
+    "        s_e = s_path.split('/')[-1]\n",
+    "\n",
+    "        df_shape_style = df_test.query(f\"label == {l} & style_image == '{s_e}'\")\n",
+    "        images = df_shape_style[\"image\"].values\n",
+    "        if len(images) > 0:\n",
+    "            out_path = os.path.join(output_path, c)\n",
+    "\n",
+    "            image_loader(s_path).save(os.path.join(tmp_style, s_path.split('/')[-1]))\n",
+    "            \n",
+    "            for img in images:\n",
+    "                img_path = os.path.join(root_test, c, img)\n",
+    "                image_loader(img_path).save(os.path.join(tmp_shape, img))\n",
+    "            \n",
+    "            adaIN(path_shape=tmp_shape, path_style=tmp_style, path_output=out_path, cuda_device=cuda_device)\n",
+    "\n",
+    "            tmp_files = glob.glob(os.path.join(tmp_shape, \"*\"))\n",
+    "            tmp_files.extend(glob.glob(os.path.join(tmp_style, \"*\")))\n",
+    "\n",
+    "            for f in tmp_files:\n",
+    "                os.remove(f)"
    ]
   },
   {
